--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
+body{
+	background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 
 .bg-aqua{
     background-color: #00cec9
+}
+
+.bg-light{
+	background: #34e89e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0f3443, #34e89e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0f3443, #34e89e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .img-icon{
@@ -10,3 +23,29 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.bg-blue-gradient{
+	background: #2193b0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+nav ul{
+	display: inline-block;
+}
+nav li{
+	display: inline-block;
+	margin-left: 30px;
+	margin-top: 2px;
+}
+
+nav ul li a{
+	color: #f2994a;
+}
+nav ul li a:hover{
+	text-decoration: none;
+	color: white;
+}
+
+
